# user-fraud-nlp

./: .gitignore  README.md  articles_supabase.py  cfpb_articles.py  dashboard_modal.py  fraud_dashboard.py  llm_embedding.py  main.py  ml_train.py  pyproject.toml  semantic_search.py  txt
data/processed/: cfpb_articles_20251111.csv  cfpb_articles_20251112.csv
models/: logistic_regression_model.pkl
