[project]
name = "user-fraud-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "joblib>=1.5.2",
    "lxml>=6.0.2",
    "openai>=2.7.2",
    "pandas>=2.3.3",
    "plotly-express>=0.4.1",
    "readability-lxml>=0.8.4.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "supabase>=2.24.0",
    "tqdm>=4.67.1",
    "wordcloud>=1.9.4",
]
